--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
             <artifactId>simple-java-mail</artifactId>
             <version>6.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>3.11.09</version>
+        </dependency>
+
     </dependencies>
 
 </project>
